<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo_2021"

    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/scrollRel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="ScrollViewSize">


        <TextView
            android:id="@+id/tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/in"
            android:textColor="@color/white"
            android:textSize="24sp">

        </TextView>

        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_in"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="150dp"
            android:text="@string/greeting"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_greeting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_greeting"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/instruction"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_greeting3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_greeting2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:text="@string/instruction1"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_greeting3"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="60dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/shape_simple"
                android:focusable="auto"
                android:hint="@string/input_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:overScrollMode="always"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/et_email"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_simple"
                android:fitsSystemWindows="true"
                android:focusable="auto"
                android:hint="@string/input_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:overScrollMode="always"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/shape_btn"
                android:minHeight="48dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn"
                android:orientation="horizontal"
                android:paddingHorizontal="40dp"
                android:paddingBottom="60dp">


                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:text="@string/password_forgotten"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_clickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/click_here"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>